--- a/readable/.obsidian/appearance.json
+++ b/readable/.obsidian/appearance.json
@@ -1,6 +1,6 @@
 {
   "accentColor": "",
-  "cssTheme": "GitHubDHC",
+  "cssTheme": "Red Graphite",
   "baseFontSize": 16,
   "interfaceFontFamily": "Calibri"
 }
